<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_40dp"
        android:text="@string/crear_mi_cuenta"
        android:textColor="@color/colorGrey"
        android:textSize="@dimen/font_size_large"
        android:textStyle="normal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tvPrivacy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_full_privacy"
        android:textColor="@color/colorRed"
        android:gravity="center_horizontal"
        android:textSize="@dimen/font_size_larger_small"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:layout_marginRight="@dimen/dimen_20dp"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/edtNombreCompleto"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_height_edt"
        android:textColor="@color/colorGrey"
        android:hint="@string/nombre_completo"
        android:textSize="@dimen/font_size_normal"
        android:background="@drawable/background_edittext_gray"
        android:padding="@dimen/dimen_10dp"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:layout_marginRight="@dimen/dimen_20dp"
        android:nextFocusDown="@+id/edtNoDeIdentidad"
        android:imeOptions="actionNext"
        android:lines="1"
        android:singleLine="true"
        app:layout_constraintTop_toBottomOf="@+id/tvPrivacy"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/edtNoDeIdentidad"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_height_edt"
        android:textColor="@color/colorGrey"
        android:hint="@string/no_de_identidad"
        android:textSize="@dimen/font_size_normal"
        android:background="@drawable/background_edittext_gray"
        android:padding="@dimen/dimen_10dp"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:layout_marginRight="@dimen/dimen_20dp"
        android:imeOptions="actionNext"
        android:nextFocusDown="@+id/edtCorreoElectronico"
        android:lines="1"
        android:singleLine="true"
        app:layout_constraintTop_toBottomOf="@+id/edtNombreCompleto"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/edtCorreoElectronico"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_height_edt"
        android:textColor="@color/colorGrey"
        android:hint="@string/correo_electronico"
        android:textSize="@dimen/font_size_normal"
        android:background="@drawable/background_edittext_gray"
        android:padding="@dimen/dimen_10dp"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:layout_marginRight="@dimen/dimen_20dp"
        android:nextFocusDown="@+id/edtContrasena"
        android:imeOptions="actionNext"
        android:lines="1"
        android:singleLine="true"
        app:layout_constraintTop_toBottomOf="@+id/edtNoDeIdentidad"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/edtContrasena"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_height_edt"
        android:textColor="@color/colorGrey"
        android:inputType="textPassword"
        android:hint="@string/contrasena"
        android:textSize="@dimen/font_size_normal"
        android:background="@drawable/background_edittext_gray"
        android:padding="@dimen/dimen_10dp"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:layout_marginRight="@dimen/dimen_20dp"
        android:nextFocusDown="@+id/edtConfirmarContrasena"
        android:imeOptions="actionNext"
        android:lines="1"
        android:singleLine="true"
        app:layout_constraintTop_toBottomOf="@+id/edtCorreoElectronico"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/edtConfirmarContrasena"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_height_edt"
        android:textColor="@color/colorGrey"
        android:inputType="textPassword"
        android:hint="@string/confirmar_contrasena"
        android:textSize="@dimen/font_size_normal"
        android:background="@drawable/background_edittext_gray"
        android:padding="@dimen/dimen_10dp"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:layout_marginRight="@dimen/dimen_20dp"
        android:imeOptions="actionDone"
        android:lines="1"
        android:singleLine="true"
        android:nextFocusDown="@+id/btnContinuar"
        app:layout_constraintTop_toBottomOf="@+id/edtContrasena"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/btnContinuar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_height_button"
        android:background="@drawable/background_button_orange_corner"
        android:text="@string/continuar"
        android:textColor="@color/colorWhite"
        android:textAllCaps="true"
        android:textSize="@dimen/font_size_larger_normal"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/dimen_10dp"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:layout_marginRight="@dimen/dimen_20dp"
        tools:layout_editor_absoluteX="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
