<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/relativeLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivSuccess"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_70sdp"
        android:layout_marginTop="@dimen/dimen_90dp"
        android:contentDescription="@null"
        android:scaleType="fitXY"
        android:src="@drawable/ic_checked"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exito"
        android:textSize="@dimen/font_size_large"
        android:textStyle="bold"
        android:textColor="@color/colorGray"
        android:layout_marginTop="@dimen/dimen_50dp"
        app:layout_constraintTop_toBottomOf="@+id/ivSuccess"
        app:layout_constraintEnd_toEndOf="@+id/ivSuccess"
        app:layout_constraintStart_toStartOf="@+id/ivSuccess"
        app:layout_constraintVertical_chainStyle="packed"/>

    <TextView
        android:id="@+id/tvTitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hemos_recibido_tu_reporte"
        android:textSize="@dimen/font_size_larger_normal"
        android:textColor="@color/colorGray"
        android:layout_marginTop="@dimen/dimen_30dp"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:layout_constraintEnd_toEndOf="@+id/tvTitle"
        app:layout_constraintStart_toStartOf="@+id/tvTitle"
        app:layout_constraintVertical_chainStyle="packed"/>

    <TextView
        android:id="@+id/tvTitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/te_estaremos_contactando_pronto"
        android:textSize="@dimen/font_size_larger_normal"
        android:textStyle="normal"
        android:textColor="@color/colorGray"
        android:layout_marginTop="@dimen/dimen_30dp"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle1"
        app:layout_constraintEnd_toEndOf="@+id/tvTitle1"
        app:layout_constraintStart_toStartOf="@+id/tvTitle1"
        app:layout_constraintVertical_chainStyle="packed"/>



    <Button
        android:id="@+id/btnRegresar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:text="@string/regresar"
        android:textAllCaps="true"
        android:textSize="@dimen/font_size_larger_normal"
        android:background="@drawable/background_button_orange_corner"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle2"
        android:layout_marginTop="@dimen/dimen_50dp"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:layout_marginRight="@dimen/dimen_20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
