<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tctmy363839.ui.component.splash.SplashActivity">

    <TextView
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/tvTitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_40dp"
        android:text="@string/splash_title1"
        android:textSize="@dimen/font_size_large"
        android:textStyle="bold"
        android:textColor="@color/colorGreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_chainStyle="packed"/>

    <TextView
        android:id="@+id/tvTitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/splash_title2"
        android:textSize="@dimen/font_size_large"
        android:textStyle="bold"
        android:textColor="@color/colorGreen"
        android:layout_marginBottom="@dimen/dimen_60dp"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle1"
        app:layout_constraintVertical_chainStyle="packed"/>

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_40dp"
        android:text="@string/splash_description"
        android:textSize="@dimen/font_size_normal"
        android:textStyle="normal"
        android:textColor="@color/colorOrange"
        android:layout_marginBottom="@dimen/dimen_70dp"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle2"
        app:layout_constraintBottom_toTopOf="@+id/ivLogo"
        app:layout_constraintEnd_toEndOf="@+id/ivLogo"
        app:layout_constraintStart_toStartOf="@+id/ivLogo"
        app:layout_constraintVertical_chainStyle="packed"/>

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:contentDescription="@null"
        android:scaleType="fitXY"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnIniciar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_height_button"
        android:textColor="@color/colorWhite"
        android:text="@string/iniciar"
        android:textAllCaps="true"
        android:textSize="@dimen/font_size_larger_normal"
        android:background="@drawable/background_button_orange_corner"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo"
        android:layout_marginTop="@dimen/dimen_80dp"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:layout_marginRight="@dimen/dimen_20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
